[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
ticket_fields = { path = "../../../helpers/ticket_fields" }
axum = "0.6.0"                                      # Web framework
tokio = { version = "1", features = ["full"] }      # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
serde_json = "1.0"                                  # To work with JSON
reqwest = { version = "0.11", features = ["json"] } # HTTP client
hyper = "0.14.30"
